# YOLOv8_ONNX_ROS2

./: LICENSE  README.md
src/yolo_v8/launch/: detection.xml
yolo_v8/: package.xml  setup.cfg  setup.py
yolo_v8/yolo_v8/: detection.py
